# clawup

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md  install.ps1  install.sh  justfile  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/clawup/: Cargo.toml
crates/clawup-core/: Cargo.toml
crates/clawup-core/src/: error.rs  fs.rs  lib.rs  manifest.rs  paths.rs
crates/clawup-core/tests/: error_test.rs  fs_test.rs  manifest_test.rs  paths_test.rs
crates/clawup-ops/: Cargo.toml
crates/clawup-ops/src/: agent.rs  diff.rs  error.rs  lib.rs  profile.rs  skill.rs  soul.rs  template.rs
crates/clawup-schema/: Cargo.toml
crates/clawup-schema/src/: lib.rs  manifest.rs
crates/clawup-schema/tests/: manifest_tests.rs
crates/clawup/src/: error.rs  main.rs
crates/clawup/src/agent/: mod.rs
crates/clawup/src/cli/: agent.rs  apply.rs  config.rs  diff.rs  doctor.rs  export.rs  init.rs  mod.rs  profile.rs  skill.rs  soul.rs  sync.rs
crates/clawup/src/manifest/: mod.rs  schema.rs
crates/clawup/src/openclaw/: mod.rs  paths.rs
crates/clawup/src/profile/: mod.rs
crates/clawup/src/skill/: mod.rs
crates/clawup/src/soul/: mod.rs
crates/clawup/src/utils/: fs.rs
crates/clawup/templates/default/: clawup.toml
crates/clawup/templates/default/workspace/: SOUL.md
crates/clawup/templates/multi-agent/: clawup.toml
crates/clawup/templates/multi-agent/agents/code/: SOUL.md
crates/clawup/templates/multi-agent/agents/ops/: SOUL.md
crates/clawup/templates/multi-agent/agents/review/: SOUL.md
crates/clawup/templates/team/: clawup.toml
crates/clawup/tests/: cli_test.rs
