[package]
name = "clawup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core logic for clawup: error types, paths, utilities, and manifest operations"

[dependencies]
clawup-schema = { path = "../clawup-schema" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
json5 = { workspace = true }

# Filesystem & Paths
dirs = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
assert_fs = { workspace = true }
