[package]
name = "clawup-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Data types and schema definitions for clawup configuration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
