[package]
name = "clawup"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A CLI tool for managing OpenClaw configurations, agents, skills, souls, and profiles"

[[bin]]
name = "clawup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
json5 = { workspace = true }

# Templating
tera = { workspace = true }

# Diff
similar = { workspace = true }

# TUI / UX
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
comfy-table = { workspace = true }

# Git
git2 = { workspace = true }

# Filesystem & Paths
dirs = { workspace = true }
shellexpand = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }

# Error handling
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
assert_fs = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
